[package]
name = "rllvm"
version = "0.1.0"

author = "Cr0a3"
description = "LLVM alternativ"

edition = "2021"

[dependencies]
iced-x86 = { version = "1.21.0", features = ["code_asm"], optional = true }
libc = { version = "0.2.154", optional = true }
libloading = { version = "0.8.3", optional = true }
target-lexicon = "0.12.14"
winapi = { version = "0.3.9", features = ["winnt", "memoryapi", "libloaderapi"], optional = true }

[features]
default = ["jit", "ir"]
jit = ["dep:libc", "dep:winapi", "dep:libloading"]
context = ["dep:iced-x86"]
function = ["dep:iced-x86"]
ir = ["context", "function", "dep:iced-x86"]
